--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "SwaEngAPI",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "SwaEng has an API!",
   "main": "api.js",
   "scripts": {
@@ -14,7 +14,7 @@
     "api"
   ],
   "author": "sleepygarden",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/sleepygarden/SwaEngAPI/issues"
   },
